# min.network

./: .clang-format  .gitmodules  CMakeLists.txt  ReadMe.md
docs/: jit.bridge.webrtc.maxref.xml  jit.webrtc.client.maxref.xml  min.network.webrtc.maxref.xml
help/: jit.bridge.webrtc.maxhelp  min.network.webrtc.maxhelp
javascripts/socket-server-with-web/: package.json  pnpm-lock.yaml  socketIO.ts  vite.config.ts  wsserver.ts
javascripts/socket-server-with-web/src/: App.tsx  CameraRoute.tsx  FaceLandmarkRoute.tsx  Test.tsx  WebSocketTest.tsx  main.tsx
javascripts/socket-server-with-web/src/components/: Camara.tsx
javascripts/socket-server-with-web/src/utils/: hooks.ts  signalingClient.ts  webRTCConnection.ts
source/projects/jit.bridge.webrtc/: CMakeLists.txt  decoder_libav.cpp  decoder_libav.h  encoder_libav.cpp  encoder_libav.h  jit.bridge.webrtc.cpp  jit.bridge.webrtc_test.cpp  webrtc_client.cpp  webrtc_client.h  webrtc_client_debug.cpp
source/projects/min.network.webrtc/: CMakeLists.txt  min.network.webrtc.cpp  min.network.webrtc_test.cpp  videodecoder_libav.cpp  videodecoder_libav.h  videoencoder_libav.cpp  videoencoder_libav.h  webrtc_client.cpp  webrtc_client.h  webrtc_client_debug.cpp
